# asterwynd

./: .env.example  .gitignore  .performance_findings.json  AGENTS.md  CLAUDE.md  CLAW-SWE-BENCH.md  CONTEXT.md  LICENSE  README.md  README_EN.md  aider_host_run.py  asterwynd.example.yaml  cli.py  eval_host.py  eval_runner.py  myagent.example.yaml  myagent_solve.py  pyproject.toml
.github/workflows/: ci.yml
.handoff/multi-agent-dev-workflow/: planning-to-reviewing.md  review-prompt.txt  review-report.md
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
.workflow/trusted-signers/: local-workflow.json
agent/: __init__.py  anthropic_llm.py  approval.py  background.py  branding.py  claw_solve.py  config.py  cost_tracker.py  llm.py  loop.py  main.py  message.py  openai_llm.py  question.py  result.py  run_config.py  run_identity.py  session.py  tool_permissions.py  tool_result_display.py  trace_recorder.py  uploads.py  workflow_adapter.py  workspace_policy.py
agent/assets/: __init__.py
agent/browser/: __init__.py  policy.py  service.py  session.py
agent/code_intelligence/: __init__.py  config.py  extractors.py  models.py  python_symbols.py  repo_map.py  tree_sitter_symbols.py
agent/commands/: __init__.py  init.py  registry.py
agent/context/: __init__.py  builder.py  protocol.py  sources.py  summarizer.py
agent/hooks/: __init__.py  manager.py
agent/lsp/: __init__.py  client.py  transport.py
agent/mcp/: __init__.py  manager.py  naming.py  tools.py  types.py
agent/memory/: manager.py  persistent.py
agent/planning/: __init__.py  manager.py
agent/skills/: __init__.py  loader.py  runtime.py
agent/subagent/: manager.py  parent_channel_hook.py  protocol.py
agent/tools/: __init__.py  base.py  factory.py  registry.py  sandbox.py
agent/tui/: __init__.py  app.py  approval.py  commands.py  controller.py  reducer.py  widgets.py
agent/workflow/: __init__.py  dispatcher.py  handoff_note.py  manager.py  models.py  role_registry.py  routing.py  state_machine.py
benchmarks/: Dockerfile.test  __init__.py  agent_runner.py  compare.py  models.py  prompt.py  runner.py  swebench_analyze.py  swebench_convert.py  swebench_pull.py  task_schema.py
benchmarks/reports/: comparison.html  comparison.md
benchmarks/tasks/: README.md
claw-swe-bench/: README.md  build_all_images.py  build_images.py  build_single.py  deepseek-v4-pro.eval-myagent-50.json  fix_base.Dockerfile  pull_images.py
claw-swe-bench/claw_swebench/: config.py  workspace.py
docs/: ONBOARDING.md  architecture.md  benchmark-plan.md  coding-agent-roadmap.md  development-guide.md  handoff-integrate-claw-swe-bench.md  handoff-wsl-eval.md  harbor-integration-analysis.md  interview-qa-log.md  lessons-learned.md  openspec-change-backlog.md  project-positioning.md  reference-agent-parity.md  requirements-process.md  resume-description.md  testing-guide.md
docs/adr/: ADR-0001-independent-local-workflow-control-plane.md  _TEMPLATE.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/assets/: asterwynd-tui-wordmarks.txt  asterwynd-wordmark-compact.txt  asterwynd-wordmark.txt
docs/audits/: spec-implementation-gaps.md
docs/discussions/: 2026-06-15-p1-p3-scope-review.md  2026-06-16-p2-cross-agent-benchmark.md  2026-06-27-asterwynd-handoff.md  2026-06-27-asterwynd-slogan-readme.md  2026-06-27-naming-tool-exploration.md  2026-06-27-project-renaming-brainstorm-output.md  2026-06-27-project-renaming-brainstorm-prompt.md  2026-06-27-project-renaming.md
docs/research/: agent-engineering-best-practices-2026-07.md
docs/workflow-adapter/: AGENTS_SNIPPET.md  SKILL.md
harbor/asterwynd_adapter/: README.md  __init__.py  (+1 more)
openspec/: config.yaml  project.md
scripts/: check_openspec_artifacts.py  check_phase_done.py  start-docker-daemon.sh  workflow_guard.py  workflow_hook.example.json  workflow_methods.json  workflow_state.py
skills/: code-review.md  research.md
tests/: test_check_phase_done.py  test_cli.py  test_openspec_artifact_checker.py  test_workflow_state_compat.py
web/: __init__.py  debug_hook.py  server.py  session.py
workflow_control/: __init__.py  receipt.py
(+754 files in other folders)
