[project]
name = "myagent"
version = "0.1.0"
description = "A lightweight general-purpose AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
