[project]
name = "asterwynd"
version = "0.1.0"
description = "Asterwynd — a local-first AI coding agent for agent-engineering roles. Agent runtime, tool calling, context management, code modification, verification, observability, and benchmark loop."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Asterwynd contributors" },
]
keywords = ["ai", "coding-agent", "cli", "agent", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.100.0",
    "platformdirs>=2.0.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "websockets>=14.0",
    "datasets>=5.0.0",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-kotlin>=1.0.0",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "swebench>=4.1.0",
]
lsp = [
    "python-lsp-server>=1.12.0",
]

[project.urls]
Repository = "https://github.com/Xingkai98/asterwynd"

[project.scripts]
asterwynd = "agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "real_api: tests that require a real LLM API endpoint",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "web", "benchmarks"]
include = ["web/static/**"]
